2004-06-28  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Improved handling of SMB shares. Some minor fixes.
	* Makefile: Working on V 0.16.

2004-06-10  Florian Boor  <florian.boor@kernelconcepts.de>
	* Released V 0.15

2004-06-09  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Fixed selfmade bug causing history to contain bad stuff.
	* main.c: Fixed several memory leaks.
	* main.c, Makefile: Removed zoom stuff.
	* main.c: Implemented context menu and click handling in list view.

2004-06-08  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Change widgets, disable zooming in list mode.
	* main.c: Started implementing a proper list mode using GtkTreeView.
    * main.c: Added buttons to change view.
    * main.c: Some minor fixes.

2004-06-07  Florian Boor  <florian.boor@kernelconcepts.de>
    * main.c: Using new features to set to list view now.
    * familiar/control1: Changed libgpewidget dependency from 0.27 to 
      coming release 0.83.
    * Makefile: Some compatibility changes.

2004-06-02  Florian Boor  <florian.boor@kernelconcepts.de>
    * Makefile: Version = 0.14
    * Released V 0.14 

2004-05-25  Florian Boor  <florian.boor@kernelconcepts.de>
    * main.c: Same for second toolbar.
    
2004-05-24  Florian Boor  <florian.boor@kernelconcepts.de>
    * main.c: Removed setting of toolbar style for more fexibility. 
              We'll use xsettings to set this in future.
    
2004-05-23  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: show_popup(): Enabled context menu everywhere. Enable only 
	  possible items.

2004-05-21  Florian Boor  <florian.boor@kernelconcepts.de>
    * main.c: Added some stuff to make copying remote files work.
    * main.c: Added progress dialog and option to cancel a running transfer.
    * main.c: Some minor bugfixes.
    * main.c: transfer_callback() Removed wrong stock icons from error dialog.
    * main.c: paste_file_clip() Check if src != dest before start copy.
