@@ -1,4 +1,5 @@
 2004-06-28  Florian Boor  <florian.boor@kernelconcepts.de>
+	* main.c: add_icon() Improved displaying of ctime in list view.
 	* main.c: Improved handling of SMB shares. Some minor fixes.
 	* Makefile: Working on V 0.16.
 
